--- a/app/templates/addgroup.html
+++ b/app/templates/addgroup.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.3.0">
     <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
       <div class="main-navigation">
-        {% include 'postlognav.html' %}
+        {%- include 'postlognav.html' -%}
       </div>
       <div class="content">
         <div class="objectcontent">
@@ -15,17 +15,24 @@
             <form action="" method="post" name="addgroup">
               <label><b>Group Name</b></label>
               <input type="text" name="groupname">
+              <label><b>Color</b></label>
+              <select>
+                <option selected value="black">black</option>
+                {%- for color in colors -%}
+                <option value="{{ color }}">{{ color }}</option>
+                {%- endfor -%}
+              </select>
               <input type="submit" value="Submit">
             </form>
           </div>
         </div>
-{% if response %}
+{%- if response -%}
 <div class="objectresponse">
 <pre id="json">
 {{ response }}
 </pre>
 </div>
-{% endif %}
+{%- endif -%}
       </div>
     </body>
 </html>
