--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.3.0">
     <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
       <div class="main-navigation">
-        {% include 'prelognav.html' %}
+        {%- include 'prelognav.html' -%}
       </div>
       <br>
       <div class="content">
@@ -24,9 +24,9 @@
             <label><b>Domain</b></label>
             <input type="text" name="domain">
             <input type="submit" value="Log In">
-            {% if feedback %}
+            {%- if feedback -%}
             <br><span><b>{{ feedback }}</b></span>
-            {% endif %}
+            {%- endif -%}
           </form>
         </div>
       </div>
