--- a/app/templates/postlognav.html
+++ b/app/templates/postlognav.html
@@ -1,30 +1,30 @@
 <ul>
-  {% if 'custom' in request.path %}
+  {%- if 'custom' in request.path -%}
   <li><a class="active" href="/custom">Custom</a></li>
-  {% else %}
+  {%- else -%}
   <li><a href="/custom">Custom</a></li>
-  {% endif %}
-  {% if 'add' in request.path %}
+  {%- endif -%}
+  {%- if 'add' in request.path -%}
   <li><a class="active">Add Objects</a>
-  {% else %}
+  {%- else -%}
   <li><a>Add Objects</a>
-  {% endif %}
+  {%- endif -%}
     <ul>
       <li><a href="/addhost">Host</a></li>
       <li><a href="/addnetwork">Network</a></li>
       <li><a href="/addgroup">Group</a></li>
     </ul>
   </li>
-  {% if 'policy' in request.path %}
+  {%- if 'policy' in request.path -%}
   <li><a class="active" href="/policy">Policy</a></li>
-  {% else %}
+  {%- else -%}
   <li><a href="/policy">Policy</a></li>
-  {% endif %}
-  {% if 'commands' in request.path %}
+  {%- endif -%}
+  {%- if 'commands' in request.path -%}
   <li><a class="active" href="/commands">Commands</a></li>
-  {% else %}
+  {%- else -%}
   <li><a href="/commands">Commands</a></li>
-  {% endif %}
+  {%- endif -%}
   <li><a href="/logout">Logout</a></li>
 </ul>
 <br>
