--- a/app/templates/showobject.html
+++ b/app/templates/showobject.html
@@ -1,50 +1,50 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.3.0">
     <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
       <div class="content">
         <div class="showobject">
-          {% if cpobject['type'] == 'host' %}
+          {%- if cpobject['type'] == 'host' -%}
           <h1>Host</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>IP Address: {{ cpobject['ipv4-address'] }}</p>
 
-          {% elif cpobject.type == 'network' %}
+          {%- elif cpobject.type == 'network' -%}
           <h1>Network</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Network: {{ cpobject['subnet4'] }}</p>
           <p>Netmask: {{ cpobject['subnet-mask'] }}</p>
 
-          {% elif cpobject['type'] == 'group' %}
+          {%- elif cpobject['type'] == 'group' -%}
           <h1>Group</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Members:</p>
-          {% for member in cpobject['members'] %}
+          {%- for member in cpobject['members'] -%}
           <p><a href="/showobject/{{ member['uid'] }}" target="_blank">{{ member['name'] }}</a></p>
-          {% endfor %}
+          {%- endfor -%}
 
-          {% elif cpobject['type'] == 'service-group' %}
+          {%- elif cpobject['type'] == 'service-group' -%}
           <h1>Service Group</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Members:</p>
-          {% for member in cpobject['members'] %}
+          {%- for member in cpobject['members'] -%}
           <p><a href="/showobject/{{ member['uid'] }}" target="_blank">{{ member['name'] }}</a></p>
-          {% endfor %}
+          {%- endfor -%}
 
-          {% elif cpobject['type'] == 'service-tcp' %}
+          {%- elif cpobject['type'] == 'service-tcp' -%}
           <h1>TCP Service</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Port(s): {{ cpobject['port'] }}</p>
 
-          {% elif cpobject['type'] == 'service-udp' %}
+          {%- elif cpobject['type'] == 'service-udp' -%}
           <h1>UDP Service</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Port(s): {{ cpobject['port'] }}</p>
 
-          {% elif cpobject['type'] == 'simple-gateway' %}
+          {%- elif cpobject['type'] == 'simple-gateway' -%}
           <h1>Check Point Gateway</h1>
           <p>Name: {{ cpobject['name'] }}</p>
           <p>Hardware: {{ cpobject['hardware'] }}</p>
@@ -52,43 +52,43 @@
           <p>OS: {{ cpobject['os-name'] }}</p>
           <p><u>Interfaces</u></p>
 
-          {% for interface in cpobject['interfaces'] %}
+          {%- for interface in cpobject['interfaces'] -%}
           <p>{{ interface['name']}}: {{ interface['ipv4-address'] }}/{{ interface['ipv4-mask-length']}}<p>
-          {% endfor %}
+          {%- endfor -%}
 
           <p><u>Blades</u></p>
-          {% if cpobject['firewall'] %}
+          {%- if cpobject['firewall'] -%}
           <p>Firewall<p>
-          {% endif %}
-          {% if cpobject['vpn'] %}
+          {%- endif -%}
+          {%- if cpobject['vpn'] -%}
           <p>VPN<p>
-          {% endif %}
-          {% if cpobject['application-control'] %}
+          {%- endif -%}
+          {%- if cpobject['application-control'] -%}
           <p>Application Control<p>
-          {% endif %}
-          {% if cpobject['url-filtering'] %}
+          {%- endif -%}
+          {%- if cpobject['url-filtering'] -%}
           <p>URL Filtering<p>
-          {% endif %}
-          {% if cpobject['ips'] %}
+          {%- endif -%}
+          {%- if cpobject['ips'] -%}
           <p>IPS<p>
-          {% endif %}
-          {% if cpobject['content-awareness'] %}
+          {%- endif -%}
+          {%- if cpobject['content-awareness'] -%}
           <p>Content Awareness<p>
-          {% endif %}
-          {% if cpobject['anti-bot'] %}
+          {%- endif -%}
+          {%- if cpobject['anti-bot'] -%}
           <p>Anti-Bot<p>
-          {% endif %}
-          {% if cpobject['anti-virus'] %}
+          {%- endif -%}
+          {%- if cpobject['anti-virus'] -%}
           <p>Anti-Virus<p>
-          {% endif %}
-          {% if cpobject['threat-emulation'] %}
+          {%- endif -%}
+          {%- if cpobject['threat-emulation'] -%}
           <p>Threat Emulation<p>
-          {% endif %}
+          {%- endif -%}
 
-          {% else %}
+          {%- else -%}
           <h1>{{ cpobject['type'] }}</h1>
           <p>Name: {{ cpobject['name'] }}</p>
-          {% endif %}
+          {%- endif -%}
         </div>
       </div>
     </body>
