--- a/app/templates/commands.html
+++ b/app/templates/commands.html
@@ -1,7 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='files/cpapi.ico') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
@@ -12,7 +15,7 @@
         <div class="commandform">
           <form action="" method="post" name="command">
             <label><b>Target(s)</b></label>
-            <select multiple name="target">
+            <select class="selectjs" multiple="multiple" name="target">
               {%- for target in alltargets -%}
               <option value="{{ target }}">{{ target }}</option>
               {%- endfor -%}
