--- a/app/templates/addgroup.html
+++ b/app/templates/addgroup.html
@@ -1,7 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='files/cpapi.ico') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
@@ -22,11 +25,13 @@
                 <option value="{{ color }}">{{ color }}</option>
                 {%- endfor -%}
               </select>
-              <select multiple name="members">
+              <label><b>Group Members</b></label>
+              <select class="selectjs" multiple="multiple" name="members">
                 {%- for cpobject in allobjects['networkobjects'] -%}
                   <option value="{{ cpobject[0] }}">{{ cpobject[1] }} - {{ cpobject[2] }}</option>
                 {%- endfor -%}
               </select>
+              <br>
               <input type="submit" value="Submit">
             </form>
           </div>
