--- a/app/templates/custom.html
+++ b/app/templates/custom.html
@@ -1,7 +1,10 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='files/cpapi.ico') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
@@ -10,9 +13,9 @@
       </div>
       <div class="content">
         <div class="customform">
-          <form action="" method="post" name="command">
+          <form action="/custom" method="post" name="command">
             <label><b>Command</b></label>
-            <select name="command">
+            <select id="command" name="command">
               {%- for command in allcommands -%}
                 {%- if command == lastcomm -%}
                 <option value="{{ command }}" selected>{{ command }}</option>
@@ -23,11 +26,11 @@
             </select>
             <label><b>Payload</b></label>
             {%- if payload -%}
-            <input type="text" name="payload" value="{{payload}}">
+            <input id="payload" type="text" name="payload" value="{{payload}}">
             {%- else -%}
-            <input type="text" name="payload" value="{}">
+            <input id="payload" type="text" name="payload" value="{}">
             {%- endif -%}
-            <input type="submit" value="Submit">
+            <input onclick="serverPost()" type="submit" value="Submit">
           </form>
         </div>
 {%- if response -%}
