--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
             <label><b>IP Address</b></label>
             <input type="text" name="ipaddress">
             <label><b>Username</b></label>
-            <input type="text" name="username">
+            <input type="text" name="user">
             <label><b>Password</b></label>
             <input type="password" name="password">
             <label><b>Domain</b></label>
