--- a/app/static/styles/cpapi.css
+++ b/app/static/styles/cpapi.css
@@ -264,39 +264,28 @@ select {
 }
 
 /* Objects */
-.left-pane {
-  display:flex;
-  flex-direction:column;
-  height: 100%;
-  margin-bottom: 5%;
-  margin-top: 2%;
-  min-height: 254px;
-  min-width: 254px;
-  position: relative;
-  width: 25%;
-}
-
-.right-pane {
-  height: 100%;
-  margin-top: 2%;
-  margin-bottom: 5%;
-  min-height: 542px;
-  min-width: 1239px;
-  padding-left: 2.5%;
-  width: 75%;
-}
-
 .objectinfo {
   background-color: #576372;
   border: 2px solid #E65785;
   border-radius: 15px;
   padding: 20px;
   position: relative;
-  width: 50%;
+  width: 25%;
+}
+
+.objectinfo label {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;;
 }
 
 .objectinfo p {
   color: #E65785;
+  font-weight: bold;
+}
+
+.objectinfo h1 {
+  color: white;
 }
 
 #hostform {
