Fixed bug in sqlite retry when database is locked.

--- a/app/static/styles/cpapi.css
+++ b/app/static/styles/cpapi.css
@@ -179,6 +179,7 @@ select {
 .sandboxresponse {
   border: 2px solid #E65785;
   border-radius: 25px;
+  display: none;
   padding: 20px;
   position: relative;
   margin-left: auto;
